Several fixes to be compliant with code checks